unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/Campaign_Group_Google_Ads__dlm.object-meta.xml
<CustomObject>
    <label>Campaign Group Google Ads</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Campaign Group Google Ads</labelOverride>
        <masterLabel>Campaign Group Google Ads</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>