unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/campaign_group_id__c.field-meta.xml
<CustomField>
    <fullName>campaign_group_id__c</fullName>
    <label>campaign_group id</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>campaign_group id</labelOverride>
        <masterLabel>campaign_group id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>