unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/campaign_group_name__c.field-meta.xml
<CustomField>
    <fullName>campaign_group_name__c</fullName>
    <label>campaign_group name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>campaign_group name</labelOverride>
        <masterLabel>campaign_group name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>