unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/campaign_group_status__c.field-meta.xml
<CustomField>
    <fullName>campaign_group_status__c</fullName>
    <label>campaign_group status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>campaign_group status</labelOverride>
        <masterLabel>campaign_group status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>