unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/customer_status__c.field-meta.xml
<CustomField>
    <fullName>customer_status__c</fullName>
    <label>customer status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>customer status</labelOverride>
        <masterLabel>customer status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>