unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/Google_Ads_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Primary_Key__c</fullName>
    <label>Google Ads Primary Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Google Ads Primary Key</labelOverride>
        <masterLabel>Google Ads Primary Key</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>