unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/metrics_average_cost__c.field-meta.xml
<CustomField>
    <fullName>metrics_average_cost__c</fullName>
    <label>metrics average_cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>metrics average_cost</labelOverride>
        <masterLabel>metrics average_cost</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>