unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/metrics_conversions__c.field-meta.xml
<CustomField>
    <fullName>metrics_conversions__c</fullName>
    <label>metrics conversions</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>metrics conversions</labelOverride>
        <masterLabel>metrics conversions</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>