unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/metrics_cost_per_conversion__c.field-meta.xml
<CustomField>
    <fullName>metrics_cost_per_conversion__c</fullName>
    <label>metrics cost_per_conversion</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>metrics cost_per_conversion</labelOverride>
        <masterLabel>metrics cost_per_conversion</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>