unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/segments_date__c.field-meta.xml
<CustomField>
    <fullName>segments_date__c</fullName>
    <label>segments date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>segments date</labelOverride>
        <masterLabel>segments date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>