unpackaged/main/default/objects/Campaign_Group_Google_Ads__dlm/fields/segments_quarter__c.field-meta.xml
<CustomField>
    <fullName>segments_quarter__c</fullName>
    <label>segments quarter</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>segments quarter</labelOverride>
        <masterLabel>segments quarter</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>